--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "TelFood",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Indrio Eko Purnomo",
+  "homepage": "http://hexa.id/",
   "private": true,
   "scripts": {
     "start": "ionic-app-scripts serve",
@@ -35,5 +35,5 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "TelFood"
 }
