--- a/package.json
+++ b/package.json
@@ -1,46 +1,63 @@
 {
-  "name": "TelFood",
-  "version": "0.0.1",
-  "author": "Indrio Eko Purnomo",
-  "homepage": "http://hexa.id/",
-  "private": true,
-  "scripts": {
-    "start": "ionic-app-scripts serve",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
-  },
-  "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.13.0",
-    "@ionic-native/splash-screen": "~4.13.0",
-    "@ionic-native/status-bar": "~4.13.0",
-    "@ionic/pro": "2.0.3",
-    "@ionic/storage": "^2.2.0",
-    "cordova-sqlite-storage": "^2.4.0",
-    "firebase": "^5.5.0",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
-    "typescript": "~2.6.2"
-  },
-  "description": "TelFood",
-  "cordova": {
-    "plugins": {
-      "cordova-sqlite-storage": {}
+    "name": "TelFood",
+    "version": "0.0.1",
+    "author": "Indrio Eko Purnomo",
+    "homepage": "http://hexa.id/",
+    "private": true,
+    "scripts": {
+        "start": "ionic-app-scripts serve",
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "node --max_old_space_size=8192 ./node_modules/@ionic/app-scripts/bin/ionic-app-scripts.js build"
+    },
+    "dependencies": {
+        "@angular/animations": "5.2.11",
+        "@angular/common": "5.2.11",
+        "@angular/compiler": "5.2.11",
+        "@angular/compiler-cli": "5.2.11",
+        "@angular/core": "5.2.11",
+        "@angular/forms": "5.2.11",
+        "@angular/http": "5.2.11",
+        "@angular/platform-browser": "5.2.11",
+        "@angular/platform-browser-dynamic": "5.2.11",
+        "@ionic-native/core": "~4.13.0",
+        "@ionic-native/splash-screen": "~4.13.0",
+        "@ionic-native/status-bar": "~4.13.0",
+        "@ionic/pro": "2.0.3",
+        "@ionic/storage": "^2.2.0",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ionic-keyboard": "^2.1.2",
+        "cordova-plugin-ionic-webview": "^2.1.4",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.4.0",
+        "firebase": "^5.5.0",
+        "ionic-angular": "3.9.2",
+        "ionicons": "3.0.0",
+        "rxjs": "5.5.11",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.26"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.2.0",
+        "typescript": "~2.6.2"
+    },
+    "description": "TelFood",
+    "cordova": {
+        "plugins": {
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
-  }
 }
