--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/core": "~4.13.0",
+        "@ionic-native/fcm": "^4.13.0",
         "@ionic-native/splash-screen": "~4.13.0",
         "@ionic-native/status-bar": "~4.13.0",
         "@ionic/pro": "2.0.3",
         "@ionic/storage": "^2.2.0",
         "cordova-android": "^6.2.3",
+        "cordova-browser": "^4.1.0",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-fcm": "^2.1.2",
         "cordova-plugin-ionic-keyboard": "^2.1.2",
         "cordova-plugin-ionic-webview": "^2.1.4",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -54,10 +57,12 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-fcm": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
