- Upgrade ionic, cordova, & node - Add Logout to Merchant - Add order notification to merchant - Add merchant name on top order details

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,8 @@
 {
   "name": "Indifood Court",
-  "app_id": "dc483181",
-  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular",
+  "pro_id": "dc483181"
 }
